fix: auto input incrementals not working on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -134,9 +134,9 @@ input.time__control {
 }
 
 input[type="number"] {
-//  -webkit-appearance: textfield;
-//  -moz-appearance: textfield;
-//  appearance: textfield;
+ -webkit-appearance: textfield;
+ -moz-appearance: textfield;
+  appearance: textfield;
   font-size: 1rem;
   font-weight: 600;
   width: 120px;
@@ -144,7 +144,7 @@ input[type="number"] {
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
-//  -webkit-appearance: none;
+  -webkit-appearance: none;
 }
 
 .time__incremental {
